# RegularToFA_Cpp

./: README.md
cli/: .gitignore  CMakeLists.txt  main.cpp
cli/src/: dfa.cpp  generateLexer.cpp  regExp.cpp  regExp.h  regScanner.cpp
cli/tests/: nfaToDfaTest.cpp  regScanTest.cpp  regToNfaTest.cpp  testGenerate.cpp
gui/Lexer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/Lexer/src/: dfa.cpp  dfa.h  nfa.cpp  nfa.h  regExp.cpp  regExp.h  regScanner.h  util.h
gui/Lexer/tests/: hello.cpp  nfaToDfaTest.cpp  regScanTest.cpp  regToNfaTest.cpp  testGenerate.cpp
